fix display bug of additional controls on mobile

--- a/app/scripts/src/less/ui/container.less
+++ b/app/scripts/src/less/ui/container.less
@@ -7,8 +7,4 @@
 	.hearthstone .joustjs .external-player-container {
 		margin-bottom: 100px;
 	}
-	.hearthstone .joustjs .replay__controls {
-		// height: 100px;
-    	padding-bottom: 100px;
-	}
 }
